# miniRT

./: CMakeLists.txt  Makefile  README.md  config.rt  config.txt
headers/: calc_light.h  colours.h  geom.h  header.h  intersections.h  main.h  mlx_additional.h  mlx_head.h  parser.h  ray.h  renderer.h  screenshot.h  test.h  utils.h
libs/libft/: Makefile  ft_atof.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_intlen.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  (+8 more)
libs/mms/: Makefile
scenes/: Wolf.rt  cyl.rt  plae.rt  sample1.rt  sample2.rt  spheres4.rt  spheres_1.rt  spheres_2.rt  spheres_3.rt  sq1.rt  test1.rt  triangle1.rt  triangle2.rt
src/: main.c
src/colours/: colours.c
src/conf_parser/: parser.c
src/geom/: geom.c  geom.h  geom_extra.c
src/intersections/: closest.c  cy_inter.c  pl_inter.c  sp_inter.c  sq_inter.c  tr_inter.c
src/lighting/: calc_light.c
src/mlx/: mlx_additional.c  mlx_head.c  mlx_head.h
src/parser/: parser_basic.c  parser_check.c  parser_extra.c  parser_param1.c  parser_param2.c
src/rays/: ray.c
src/renderer/: renderer.c
src/save_bmp/: save.c  save.h
src/screenshot/: screenshot.c
src/utils/: utils.c  (+1 more)
(+3 files in other folders)
